<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#000000"
    tools:context=".DoorAccess"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="#000000"
        android:padding="0dp">

        <Button
            android:id="@+id/btn_mode1"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"

            android:text="@string/str_mode1"
            android:textAllCaps="false"

            android:layout_alignParentRight="false"
            android:layout_marginLeft="114dp" />
        <!-- android:background="@drawable/roundbuttonselector"-->



        <Button
            android:id="@+id/btn_mode2"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_mode1"
            android:text="@string/str_mode2"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/btn_mode3"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_mode2"
            android:text="@string/str_mode3"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/btn_mode4"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_mode3"
            android:text="@string/str_mode4"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/btn_mode5"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_mode4"
            android:text="@string/str_mode5"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/btn_mode6"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_mode5"
            android:text="@string/str_mode6"
            android:textAllCaps="false"
           />

        <Button
            android:id="@+id/btn_mode7"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_mode6"
            android:text="@string/str_mode7"
            android:textAllCaps="false"
           />

        <Button
            android:id="@+id/btn_mode8"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_mode7"
            android:text="@string/str_mode8"
            android:textAllCaps="false"
          />


        <Button
            android:id="@+id/btn_wifi"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="Wifi"
            android:visibility="invisible"
            android:layout_alignParentLeft="false" />

        <Button
            android:id="@+id/btn_usb"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_wifi"
            android:text="Usb"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_wifilist"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_toRightOf="@+id/btn_usb"
            android:text="\"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="60dp"
            android:layout_height="match_parent"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layoutLogDisplay"
                android:layout_width="800dp"
                android:layout_height="80dp"
                android:animateLayoutChanges="true"
                android:background="#000000"
                android:orientation="horizontal"
                android:visibility="visible"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp">

                <LinearLayout
                    android:layout_width="800dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:background="#b9b5ae"
                    android:visibility="visible"
                    android:layout_marginLeft="0dp">

                    <!--<TextView-->
                        <!--android:id="@+id/logDisplay"-->
                        <!--android:layout_width="fill_parent"-->
                        <!--android:layout_height="fill_parent"-->
                        <!--android:autoText="false"-->
                        <!--android:background="#CC111111"-->
                        <!--android:maxLines="@integer/abc_config_activityShortDur"-->
                        <!--android:textColor="#f8ffff" />-->
                    <ScrollView
                        android:id="@+id/scrollView"
                        android:layout_width="800dp"
                        android:layout_height="fill_parent"
                        android:scrollbars="vertical"
                        android:scrollbarStyle="outsideInset"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:background="#CC111111">
                    <TableLayout
                        android:id="@+id/tableDisplay"
                        android:background="#CC111111"
                        android:layout_width="800dp"
                        android:layout_height="fill_parent"
                        android:baselineAligned="false">
                    </TableLayout>
                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="880dp"
                android:layout_height="300dp"
                android:layout_gravity="bottom"
                android:background="@drawable/backgroundofcar"
                android:layout_marginLeft="0dp">

                <LinearLayout
                    android:id="@+id/layoutParentCar"
                    android:layout_width="945dp"
                    android:layout_height="300dp"
                    android:animateLayoutChanges="true"
                    android:gravity="top">

                    <RelativeLayout
                        android:id="@+id/carLayout"
                        android:layout_width="900dp"
                        android:layout_height="300dp"
                        android:animateLayoutChanges="true">

                        <ImageView
                            android:id="@+id/carPicture"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:cropToPadding="true"
                            android:src="@drawable/thaiminivanright3a" />

                        <ImageView
                            android:id="@+id/door1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:cropToPadding="true"
                            android:src="@drawable/minivanright3c" />

                        <ImageView
                            android:id="@+id/door2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:cropToPadding="true"
                            android:src="@drawable/minivanright3b" />

                        <ImageView
                            android:id="@+id/door3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:cropToPadding="true"
                            android:src="@drawable/minivanright3d" />

                        <ImageView
                            android:id="@+id/door4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:cropToPadding="true"
                            android:src="@drawable/minivanright3e" />

                        <ImageView
                            android:id="@+id/door5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:cropToPadding="true"
                            android:src="@drawable/minivanright3f"
                            android:layout_alignParentTop="false" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/door6"
                            android:src="@drawable/thaiminivanright3g"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical|center_horizontal"
                android:animateLayoutChanges="true"
                android:visibility="visible">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:id="@+id/but_alarmA"
                    android:textSize="20dp"
                    android:visibility="visible"
                    android:background="@drawable/circleg"
                    android:textColor="#ffffff" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:id="@+id/but_alarmB"
                    android:textSize="20dp"
                    android:visibility="visible"
                    android:background="@drawable/circleg"
                    android:textColor="#ffffff" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:id="@+id/but_alarmEX"
                    android:textSize="20dp"
                    android:visibility="visible"
                    android:background="@drawable/alarmred"
                    android:textColor="#ffffff" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:id="@+id/but_alarmC"
                    android:textSize="20dp"
                    android:visibility="visible"
                    android:background="@drawable/alarmred" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/but_alarmD"
                    android:background="@drawable/alarmred" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_gravity="left">

            <ImageButton
                android:id="@+id/btn_config"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/btnconfig"
                android:layout_marginTop="5dp"
                android:layout_gravity="left" />

            <ImageButton
                android:id="@+id/btn_expand"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/zoomin"
                android:layout_below="@+id/engine"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="left|right"
                android:layout_marginTop="5dp" />

            <ImageButton
                android:id="@+id/btn_log"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_toLeftOf="@+id/btn_config"
                android:background="@drawable/logdisable"
                android:layout_marginTop="5dp"
                android:layout_gravity="left" />

            <ImageView
                android:id="@+id/engine"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:cropToPadding="true"
                android:layout_gravity="left"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
